- BUG: If the Subversion config file had some illegal lines in it,
       TSVN could crash the explorer when the property page was shown. (Stefan)
- BUG: If the log dialog was started from the repobrowser, the diff between
       two selected revisions didn't work right. (Stefan)
- BUG: Editing the author or the log message used the wrong revision if the
       message filter was active. (Stefan)

Version 1.2

Please first look at the release notes:
http://tortoisesvn.tigris.org/tsvn_1.2_releasenotes.html

- NEW: New commands to lock/unlock files. (Stefan)
- NEW: Locked files are listed in the commit dialog so the user
       won't forget to unlock them again. (Stefan)
- NEW: Filter for the log dialog. (Stefan)
- NEW: The three parts (log list, message, change-files-list) in the
       log dialog can now be individually resized. (Stefan)
- NEW: Files not part of the selected file/folder are shown grayed out
       in the log dialogs changed-file-list. (Stefan)
- NEW: New, much improved overlay cache. (Will Dean, Stefan)
- NEW: Option to resolve a conflicted file in the status list control. (Stefan)
- NEW: TortoiseSVN now uses its own sound files for errors, warnings
       and notifications in the progress dialog. (Stefan)
- NEW: Allow diffing of renamed/copied files in the log dialog. (George Wieggers)
- NEW: A website link starting with "tsvn:" starts TortoiseSVN with the
       checkout dialog. A link starting with "svn:" will start the
       repository browser. (Stefan)
- NEW: TortoiseMerge can ignore case-only changes when diffing. (Stefan)
- NEW: Autocompletion for language-dependent keywords (usually class/method/
       variable names) in the commit dialog. (Stefan)
- NEW: Bugtracking integration extended with regular expressions. (Stefan)
- NEW: The autocompletion feature can be deactivated in the settings. (Stefan)
- NEW: Paths are checked if they're valid on Windows and an error/warning
       is shown if they're not to avoid problems later. (Stefan)